--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "dependencies": {
     "next": "canary",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@opentelemetry/api": "1.4.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.35.1",
+    "@opentelemetry/exporter-trace-otlp-http": "0.35.1",
+    "@opentelemetry/resources": "1.9.1",
+    "@opentelemetry/sdk-trace-base": "1.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
